--- a/index.html
+++ b/index.html
@@ -17,23 +17,34 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Inscription</h1>
     
-    <form >
+    <form class="form-horizontal">
         <div class="form-group">
-            <label for="firstname">First Name:</label><input type="text" name="firstname" id="firstname" placeholder="First Name"/>
+            <label for="firstname">Prénom :</label><input type="text" name="firstname" id="firstname" placeholder="Prénom"/>
         </div>
         <div class="form-group">
-            <label for="lastname">last Name:</label><input type="text" name="lastname" id="lastname" placeholder="Last Name"/>
+            <label for="lastname">Nom :</label><input type="text" name="lastname" id="lastname" placeholder="Nom"/>
         </div>
         <div class="form-group">
             <label for="email">Email:</label><input type="email" name="email" id="email" placeholder="Email"/>
         </div>
         <div class="form-group">
-            <label for="tel">Tel:</label><input type="tel" name="tel" id="tel" placeholder="Your telephone number" /> 
+            <label for="tel">Tél. mobile :</label><input type="tel" name="mobile" id="mobile" placeholder="0601020304" /> 
         </div>
         <div class="form-group">
-            <label for="date">Date:</label><input type="date" id="date" name="date" data-placeholder="DD/MM/YYYY" />
+            <p>
+                <label for="address">Addresse</label><input type="text" name="address" id="address" placeholder="Adresse" /> 
+            </p>
+            <p>
+                <label for="address">Code Postal</label><input type="number" name="zipcode" id="zipcode" /> 
+            </p>
+            <p>
+                <label for="city">Ville</label><input type="text" name="city" id="city" placeholder="Ville" /> 
+            </p>
+        </div>
+        <div class="form-group">
+            <label for="date">Date:</label><input type="date" id="birthday" name="birthday" data-placeholder="DD/MM/YYYY" />
         </div>
     </form>
     
