--- a/index.html
+++ b/index.html
@@ -21,30 +21,50 @@
     
     <form class="form-horizontal">
         <div class="form-group">
-            <label for="firstname">Prénom :</label><input type="text" name="firstname" id="firstname" placeholder="Prénom"/>
+            <label for="firstname" class="col-sm-2 control-label">Prénom :</label>
+            <div class="col-sm-10">
+                <input type="text" name="firstname" id="firstname" placeholder="Prénom"/>
+            </div>
         </div>
         <div class="form-group">
-            <label for="lastname">Nom :</label><input type="text" name="lastname" id="lastname" placeholder="Nom"/>
+            <label for="lastname" class="col-sm-2 control-label">Nom :</label>
+            <div class="col-sm-10">
+                <input type="text" name="lastname" id="lastname" placeholder="Nom"/>
+            </div>
         </div>
         <div class="form-group">
-            <label for="email">Email:</label><input type="email" name="email" id="email" placeholder="Email"/>
+            <label for="email" class="col-sm-2 control-label">Email:</label>
+            <div class="col-sm-10">
+                <input type="email" name="email" id="email" placeholder="Email"/>
+            </div>
         </div>
         <div class="form-group">
-            <label for="tel">Tél. mobile :</label><input type="tel" name="mobile" id="mobile" placeholder="0601020304" /> 
+            <label for="tel" class="col-sm-2 control-label">Tél. mobile :</label>
+            <div class="col-sm-10">
+                <input type="tel" name="mobile" id="mobile" placeholder="0601020304" /> 
+            </div>
         </div>
         <div class="form-group">
-            <p>
-                <label for="address">Addresse</label><input type="text" name="address" id="address" placeholder="Adresse" /> 
-            </p>
-            <p>
-                <label for="address">Code Postal</label><input type="number" name="zipcode" id="zipcode" /> 
-            </p>
-            <p>
-                <label for="city">Ville</label><input type="text" name="city" id="city" placeholder="Ville" /> 
-            </p>
+                <label for="address" class="col-sm-2 control-label">Addresse</label>
+                <div class="col-sm-10">
+                    <input type="text" name="address" id="address" placeholder="Adresse" /> 
+                </div>
+
+                <label for="address" class="col-sm-2 control-label">Code Postal</label>
+                <div class="col-sm-10">
+                    <input type="number" name="zipcode" id="zipcode" /> 
+                </div>
+  
+                <label for="city" class="col-sm-2 control-label">Ville</label>
+                <div class="col-sm-10">
+                    <input type="text" name="city" id="city" placeholder="Ville" /> 
+                </div>
         </div>
         <div class="form-group">
-            <label for="date">Date:</label><input type="date" id="birthday" name="birthday" data-placeholder="DD/MM/YYYY" />
+            <label for="date" class="col-sm-2 control-label">Date:</label>
+            <div class="col-sm-10">
+                <input type="date" id="birthday" name="birthday" data-placeholder="DD/MM/YYYY" />
+            </div>
         </div>
     </form>
     
