--- a/index.html
+++ b/index.html
@@ -41,27 +41,31 @@
         <div class="form-group">
             <label for="tel" class="col-sm-2 control-label">Tél. mobile :</label>
             <div class="col-sm-10">
-                <input type="tel" name="mobile" id="mobile" placeholder="0601020304" /> 
+                <input type="tel" name="mobilephone" id="mobilephone" placeholder="0601020304" /> 
             </div>
         </div>
         <div class="form-group">
-                <label for="address" class="col-sm-2 control-label">Addresse</label>
+            <div>                
+                <label for="address" class="col-sm-2 control-label">Addresse :</label>
                 <div class="col-sm-10">
                     <input type="text" name="address" id="address" placeholder="Adresse" /> 
                 </div>
-
-                <label for="address" class="col-sm-2 control-label">Code Postal</label>
+            </div>
+            <div>                
+                <label for="address" class="col-sm-2 control-label">Code Postal :</label>
                 <div class="col-sm-10">
-                    <input type="number" name="zipcode" id="zipcode" /> 
+                    <input type="text" name="zipcode" id="zipcode" /> 
                 </div>
-  
-                <label for="city" class="col-sm-2 control-label">Ville</label>
+            </div>
+            <div>                
+                <label for="city" class="col-sm-2 control-label">Ville :</label>
                 <div class="col-sm-10">
                     <input type="text" name="city" id="city" placeholder="Ville" /> 
                 </div>
+            </div>
         </div>
         <div class="form-group">
-            <label for="date" class="col-sm-2 control-label">Date:</label>
+            <label for="date" class="col-sm-2 control-label">Anniversaire :</label>
             <div class="col-sm-10">
                 <input type="date" id="birthday" name="birthday" data-placeholder="DD/MM/YYYY" />
             </div>
