--- a/index.html
+++ b/index.html
@@ -44,31 +44,29 @@
                 <input type="tel" name="mobilephone" id="mobilephone" placeholder="0601020304" /> 
             </div>
         </div>
-        <div class="form-group">
-            <div>                
-                <label for="address" class="col-sm-2 control-label">Addresse :</label>
-                <div class="col-sm-10">
-                    <input type="text" name="address" id="address" placeholder="Adresse" /> 
-                </div>
-            </div>
-            <div>                
-                <label for="address" class="col-sm-2 control-label">Code Postal :</label>
-                <div class="col-sm-10">
-                    <input type="text" name="zipcode" id="zipcode" /> 
-                </div>
-            </div>
-            <div>                
-                <label for="city" class="col-sm-2 control-label">Ville :</label>
-                <div class="col-sm-10">
-                    <input type="text" name="city" id="city" placeholder="Ville" /> 
-                </div>
+        <div  class="form-group">                
+            <label for="address" class="col-sm-2 control-label">Addresse :</label>
+            <div class="col-sm-10">
+                <input type="text" name="address" id="address" placeholder="Adresse" /> 
             </div>
         </div>
-        <div class="form-group">
-            <label for="date" class="col-sm-2 control-label">Anniversaire :</label>
+        <div  class="form-group">                
+            <label for="address" class="col-sm-2 control-label">Code Postal :</label>
             <div class="col-sm-10">
-                <input type="date" id="birthday" name="birthday" data-placeholder="DD/MM/YYYY" />
+                <input type="text" name="postalcode" id="postalcode" /> 
             </div>
+        </div>
+        <div class="form-group">                
+            <label for="city" class="col-sm-2 control-label">Ville :</label>
+            <div class="col-sm-10">
+                <input type="text" name="city" id="city" placeholder="Ville" /> 
+            </div>
+        </div>
+    <div class="form-group">
+        <label for="date" class="col-sm-2 control-label">Anniversaire :</label>
+        <div class="col-sm-10">
+            <input type="date" id="birthday" name="birthday" data-placeholder="DD/MM/YYYY" />
+        </div>
         </div>
     </form>
     
