--- a/index.html
+++ b/index.html
@@ -45,15 +45,21 @@
             </div>
         </div>
         <div  class="form-group">                
-            <label for="address" class="col-sm-2 control-label">Addresse :</label>
+            <label for="address" class="col-sm-2 control-label">Adresse :</label>
             <div class="col-sm-10">
                 <input type="text" name="address" id="address" placeholder="Adresse" /> 
+                <input type="text" name="streetaddress" id="streetaddress" placeholder="Adresse" /> 
+                <input type="text" name="street" id="street" placeholder="Adresse" /> 
+                <input type="text" name="rue" id="rue" placeholder="Adresse" /> 
             </div>
         </div>
         <div  class="form-group">                
             <label for="address" class="col-sm-2 control-label">Code Postal :</label>
             <div class="col-sm-10">
                 <input type="text" name="postalcode" id="postalcode" /> 
+                <input type="text" name="zip" id="zip" /> 
+                <input type="text" name="zipcode" id="zipcode" /> 
+                <input type="text" name="codepostal" id="codepostal" /> 
             </div>
         </div>
         <div class="form-group">                
