--- a/index.html
+++ b/index.html
@@ -48,18 +48,22 @@
             <label for="address" class="col-sm-2 control-label">Adresse :</label>
             <div class="col-sm-10">
                 <input type="text" name="address" id="address" placeholder="Adresse" /> 
+                <!--
                 <input type="text" name="streetaddress" id="streetaddress" placeholder="Adresse" /> 
                 <input type="text" name="street" id="street" placeholder="Adresse" /> 
                 <input type="text" name="rue" id="rue" placeholder="Adresse" /> 
+                -->
             </div>
         </div>
         <div  class="form-group">                
             <label for="address" class="col-sm-2 control-label">Code Postal :</label>
             <div class="col-sm-10">
                 <input type="text" name="postalcode" id="postalcode" /> 
+                <!--
                 <input type="text" name="zip" id="zip" /> 
                 <input type="text" name="zipcode" id="zipcode" /> 
                 <input type="text" name="codepostal" id="codepostal" /> 
+                -->
             </div>
         </div>
         <div class="form-group">                
@@ -71,7 +75,7 @@
     <div class="form-group">
         <label for="date" class="col-sm-2 control-label">Anniversaire :</label>
         <div class="col-sm-10">
-            <input type="date" id="birthday" name="birthday" data-placeholder="DD/MM/YYYY" />
+            <input type="text" id="birthday" name="birthday" data-placeholder="DD/MM/YYYY" />
         </div>
         </div>
     </form>
