--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <label for="address" class="col-sm-2 control-label">Adresse :</label>
             <div class="col-sm-10">
                 <input type="text" name="address" id="address" placeholder="Adresse" /> 
+                <input type="text" name="address2" id="address2" placeholder="Adresse" /> 
                 <!--
                 <input type="text" name="streetaddress" id="streetaddress" placeholder="Adresse" /> 
                 <input type="text" name="street" id="street" placeholder="Adresse" /> 
