--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div  class="form-group">                
             <label for="address" class="col-sm-2 control-label">Adresse :</label>
             <div class="col-sm-10">
-                <input type="text" name="address" id="address" placeholder="Adresse" /> 
+                <input type="text" name="address" id="address" placeholder="Adresse" /> <br/>
                 <input type="text" name="address2" id="address2" placeholder="Adresse" /> 
                 <!--
                 <input type="text" name="streetaddress" id="streetaddress" placeholder="Adresse" /> 
