--- a/index.html
+++ b/index.html
@@ -24,32 +24,32 @@
         <div class="form-group">
             <label for="firstname" class="col-sm-2 control-label">Prénom :</label>
             <div class="col-sm-10">
-                <input type="text" name="firstname" id="firstname" placeholder="Prénom"/>
+                <input type="text" class="form-control" name="firstname" id="firstname" placeholder="Prénom"/>
             </div>
         </div>
         <div class="form-group">
             <label for="lastname" class="col-sm-2 control-label">Nom :</label>
             <div class="col-sm-10">
-                <input type="text" name="lastname" id="lastname" placeholder="Nom"/>
+                <input type="text"  class="form-control"name="lastname" id="lastname" placeholder="Nom"/>
             </div>
         </div>
         <div class="form-group">
             <label for="email" class="col-sm-2 control-label">Email:</label>
             <div class="col-sm-10">
-                <input type="email" name="email" id="email" placeholder="Email"/>
+                <input type="email" class="form-control" name="email" id="email" placeholder="Email"/>
             </div>
         </div>
         <div class="form-group">
             <label for="tel" class="col-sm-2 control-label">Tél. mobile :</label>
             <div class="col-sm-10">
-                <input type="tel" name="mobilephone" id="mobilephone" placeholder="0601020304" /> 
+                <input type="tel"  class="form-control" name="mobilephone" id="mobilephone" placeholder="0601020304" /> 
             </div>
         </div>
         <div  class="form-group">                
             <label for="address" class="col-sm-2 control-label">Adresse :</label>
             <div class="col-sm-10">
-                <input type="text" name="address" id="address" placeholder="Adresse" /> <br/>
-                <input type="text" name="address2" id="address2" placeholder="Adresse" /> 
+                <input type="text" class="form-control" name="address" id="address" placeholder="Adresse" /> <br/>
+                <input type="text" class="form-control" name="address2" id="address2" placeholder="Adresse" /> 
                 <!--
                 <input type="text" name="streetaddress" id="streetaddress" placeholder="Adresse" /> 
                 <input type="text" name="street" id="street" placeholder="Adresse" /> 
@@ -60,7 +60,7 @@
         <div  class="form-group">                
             <label for="address" class="col-sm-2 control-label">Code Postal :</label>
             <div class="col-sm-10">
-                <input type="text" name="postalcode" id="postalcode" /> 
+                <input type="text" class="form-control"  name="postalcode" id="postalcode" /> 
                 <!--
                 <input type="text" name="zip" id="zip" /> 
                 <input type="text" name="zipcode" id="zipcode" /> 
@@ -71,13 +71,13 @@
         <div class="form-group">                
             <label for="city" class="col-sm-2 control-label">Ville :</label>
             <div class="col-sm-10">
-                <input type="text" name="city" id="city" placeholder="Ville" /> 
+                <input type="text" class="form-control" name="city" id="city" placeholder="Ville" /> 
             </div>
         </div>
     <div class="form-group">
         <label for="date" class="col-sm-2 control-label">Anniversaire :</label>
         <div class="col-sm-10">
-            <input type="text" id="birthday" name="birthday" data-placeholder="DD/MM/YYYY" />
+            <input type="text" class="form-control" id="birthday" name="birthday" data-placeholder="DD/MM/YYYY" />
         </div>
         </div>
     </form>
