adding missing placeholders

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <label for="address" class="col-sm-2 control-label">Adresse :</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" name="address" id="address" placeholder="Adresse" /> <br/>
-                <input type="text" class="form-control" name="address2" id="address2" placeholder="Adresse" /> 
+                <input type="text" class="form-control" name="address2" id="address2" placeholder="complément" /> 
                 <!--
                 <input type="text" name="streetaddress" id="streetaddress" placeholder="Adresse" /> 
                 <input type="text" name="street" id="street" placeholder="Adresse" /> 
@@ -61,7 +61,7 @@
         <div  class="form-group">                
             <label for="address" class="col-sm-2 control-label">Code Postal :</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control"  name="postalcode" id="postalcode" /> 
+                <input type="text" class="form-control"  name="postalcode" id="postalcode" placeholder="Code Postal" /> 
                 <!--
                 <input type="text" name="zip" id="zip" /> 
                 <input type="text" name="zipcode" id="zipcode" /> 
@@ -78,7 +78,7 @@
     <div class="form-group">
         <label for="date" class="col-sm-2 control-label">Anniversaire :</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="birthday" name="birthday" data-placeholder="DD/MM/YYYY" />
+            <input type="text" class="form-control" id="birthday" name="birthday" placeholder="date d'anniversaire" />
         </div>
         </div>
     </form>
@@ -86,7 +86,7 @@
     
   </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	
