--- a/deeplink.html
+++ b/deeplink.html
@@ -21,7 +21,7 @@
   <div class="container">
     <h1>DEEPLINKING TEST</h1>
    
-    <p> <a href="twitter://post?message=COOKIE_IS_GOOD_FOR_YOUR_HEALTH">Tweet My Cookie!</a></p>
+    <p> <a href="twitter://post?message=COOKIE_IS_GOOD_FOR_YOUR_HEALTH" style="button">Tweet My Cookie!</a></p>
     
   </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
