--- a/lp.html
+++ b/lp.html
@@ -7,7 +7,7 @@
     <title>Redirecting ...</title>
 
     <script>
-    var appstoreFail = "www.claravista.fr";
+    var appstoreFail = "http://www.claravista.fr";
 
     //Check is device is iOS
     var iOS = (navigator.userAgent.match(/(iPad|iPhone|iPod)/g) ? true : false );
@@ -28,7 +28,7 @@
         window.open(appUrlScheme,"_self");
     } else {
         //Launch the website
-        window.location = "www.google.fr";
+        window.location = "http://www.google.fr";
     }
     </script>
   </head>
