--- a/lp.html
+++ b/lp.html
@@ -17,13 +17,14 @@
     {
         //If the app is not installed the script will wait for 2sec and redirect to web.
         var loadedAt = +new Date;
-        setTimeout(
-                   function(){
-                       if (+new Date - loadedAt < 2000){
-                   window.location = appstoreFail;
-                       }
-                   }
-                   ,25);
+        setTimeout(function() {
+            if (+new Date - loadedAt < 1000){
+              try {
+                window.location = appstoreFail;
+              } catch(e) { }
+            }
+          }
+        ,25);
         //Try launching the app using URL schemes
         window.open(appUrlScheme,"_self");
     } else {
