--- a/lp.html
+++ b/lp.html
@@ -25,7 +25,7 @@
         , 25);
         //Try launching the app using URL schemes
         try {
-          window.open(appUrlScheme,"_self");
+          window.open(appUrlScheme);
         } catch(e) {}
         
     } else {
