Update and rename lp.html to lp_not.html

--- a/lp_not.html
+++ b/lp_not.html
@@ -11,7 +11,7 @@
 
     //Check is device is iOS
     var iOS = (navigator.userAgent.match(/(iPad|iPhone|iPod)/g) ? true : false );
-    var appUrlScheme = "twitter://post?message=COOKIE_IS_GOOD_FOR_YOUR_HEALTH";
+    var appUrlScheme = "zzzztwitter://post?message=COOKIE_IS_GOOD_FOR_YOUR_HEALTH";
 
     if (iOS)
     {
